fixed collapse-menu at point to 585px

--- a/css/main.css
+++ b/css/main.css
@@ -489,7 +489,7 @@ textarea {
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 580px) {
   #header {
     height: auto;
     padding: 0;
